--- a/frontend/src/components/Login/LoginForm.css
+++ b/frontend/src/components/Login/LoginForm.css
@@ -7,14 +7,14 @@ body {
     display: flex;
 	justify-content: center;
 	align-items: center;
-    width: 30vw;
+    width: 40vw;
 	height: 70vh;
     border-style: outset;
 	border-radius: 20%;
-    margin-left: 16vw;
+	margin: 7vh auto 0 auto;
 }
 
-input{
+.user-input{
 	width: 60%;
 	height: 10px;
 	background: #e0dede;
@@ -27,7 +27,7 @@ input{
 	border-radius: 5px;
 }
 
-button{
+.login-btn{
 	width: 60%;
 	height: 40px;
 	margin: 10px auto;
@@ -45,11 +45,18 @@ button{
 	cursor: pointer;
 }
 
-button:hover{
+.login-btn:hover{
 	background: #6d44b8;
 }
 
 .sign-up-link {
 	color: black;
 	text-decoration: underline;
+}
+
+/* Mobile ver */
+@media only screen and (max-width: 600px) {
+	.main {
+		width: 70vw;
+	}
 }
