--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -1,3 +1,39 @@
-a {
-    color: black
+/* Desktop ver */
+.chatroom-results {
+    display: block;
+    margin-top: 5vh;
+}
+
+.chatroom-container {
+    overflow: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+
+.chatroom-card {
+    margin: 2vh 1vw;
+    width: 48vw;
+    height: 15vh;
+    padding: 0 15px;
+    box-shadow: 0px 0px 8px #ddd;
+    text-align: right;
+    line-height: 15vh;
+    display: block;
+    text-decoration: none;
+    color: black;
+    background-image: linear-gradient(to bottom right, rgba(253,161,2,0), rgba(253,161,2,0.2));
+}
+
+.chatroom-card:hover {
+    background-color: #efefef;
+}
+
+/* Mobile ver */
+@media only screen and (max-width: 600px) {
+    .chatroom-card {
+        width: 68vw;
+    }
 }
