--- a/frontend/src/components/Chatroom/ChatInput.css
+++ b/frontend/src/components/Chatroom/ChatInput.css
@@ -2,6 +2,7 @@
 .ci-wrapper {
     width: 50vw;
     padding: 0 15px;
+    margin: auto;
 }
 
 .chat-input {
@@ -10,7 +11,7 @@
     border-color: #fda102;
     height: 5vh;
     font-size: 1.25rem;
-    width: 70%;
+    width: 40vw;
     margin-left: 5px;
 }
 
@@ -31,6 +32,7 @@
 @media only screen and (max-width: 600px) {
     .ci-wrapper{
         width: 70vw;
+        margin: auto;
     }
 
     .chat-input {
