minor css adjustments

--- a/frontend/src/components/NavBar/Navbar.css
+++ b/frontend/src/components/NavBar/Navbar.css
@@ -43,7 +43,7 @@ li {
 .title {
   font-family: "Atma", serif;
   font-weight: 300;
-  font-size: 1.25rem;
+  font-size: 1.7em;
   font-style: normal;
   color: white;
 }
